@@ -22,19 +22,20 @@ t/Tags-Output-Indent/01-use.t
 t/Tags-Output-Indent/02-version.t
 t/Tags-Output-Indent/03-new.t
 t/Tags-Output-Indent/04-finalize.t
-t/Tags-Output-Indent/05-open_tags.t
-t/Tags-Output-Indent/06-put-comment.t
-t/Tags-Output-Indent/07-put-simple_tag.t
-t/Tags-Output-Indent/08-put-preserve_from_attribute.t
-t/Tags-Output-Indent/09-put-preserve_from_constructor.t
-t/Tags-Output-Indent/10-put-tag.t
-t/Tags-Output-Indent/11-put-tags_combine.t
-t/Tags-Output-Indent/12-put-no_simple.t
-t/Tags-Output-Indent/13-put-raw.t
-t/Tags-Output-Indent/14-put-cdata.t
-t/Tags-Output-Indent/15-put-auto_flush.t
-t/Tags-Output-Indent/16-put-attributes.t
-t/Tags-Output-Indent/17-put-instruction.t
-t/Tags-Output-Indent/18-put-data_callback.t
+t/Tags-Output-Indent/05-open_elements.t
+t/Tags-Output-Indent/06-open_tags.t
+t/Tags-Output-Indent/07-put-comment.t
+t/Tags-Output-Indent/08-put-simple_tag.t
+t/Tags-Output-Indent/09-put-preserve_from_attribute.t
+t/Tags-Output-Indent/10-put-preserve_from_constructor.t
+t/Tags-Output-Indent/11-put-tag.t
+t/Tags-Output-Indent/12-put-tags_combine.t
+t/Tags-Output-Indent/13-put-no_simple.t
+t/Tags-Output-Indent/14-put-raw.t
+t/Tags-Output-Indent/15-put-cdata.t
+t/Tags-Output-Indent/16-put-auto_flush.t
+t/Tags-Output-Indent/17-put-attributes.t
+t/Tags-Output-Indent/18-put-instruction.t
+t/Tags-Output-Indent/19-put-data_callback.t
 xt/Tags-Output-Indent/01-pod_coverage.t
 xt/Tags-Output-Indent/02-pod.t
