@@ -1,5 +1,6 @@
 0.06
  - Add author website to doc.
+ - Add open_elements() method, deprecate open_tags() method with warning.
  - Add repository name to doc.
  - Fix issue with XML element in lowercase only.
  - Improve LICENSE AND COPYRIGHT section in doc.
